Automate Register Flow TestCase-11

--- a/src/main/java/ResourcePack/BookCart.properties
+++ b/src/main/java/ResourcePack/BookCart.properties
@@ -5,3 +5,5 @@ LastName = Stathom
 UserName = JS23
 Password = Jason1234
 WrongPasswordCriteria = jason1234
+FirstNameSingleCharacter = J
+LastNameSingleCharacter = S
